# Lin

./: .env  .gitignore  CHECKLIST.md  FRONTEND_GUIDE.md  FRONTEND_SETUP.md  QUICKSTART.md  README.md  api_examples.sh  pyproject.toml  tests_api.py  zapysk.txt
alembic/: env.py
alembic/versions/: 2dbb4d950187_start_db.py  715bfa9f1355_start_db.py  a1b2c3d4e5f6_add_foreign_keys.py
app/: main.py
app/core/: security.py
app/core/database/: database.py
app/core/settings/: settings.py
app/models/: __init__.py  ability.py  agent.py  auth_account.py  base.py  comment.py  email_verification.py  like.py  map.py  password_reset.py  post.py  post_tag.py  session.py  tag.py  user.py  video.py
app/routing/: api_router.py
app/routing/auth/: auth_router.py
app/routing/comments/: comment_router.py
app/routing/likes/: like_router.py
app/routing/posts/: post_router.py
app/routing/tags/: tag_router.py
app/routing/users/: user_router.py
app/routing/videos/: video_router.py
app/schemas/: auth.py  comment.py  like.py  post.py  tag.py  user.py  video.py
app/service/: auth_service.py  base_service.py  comment_service.py  like_service.py  post_service.py  tag_service.py  user_service.py  video_service.py
front/: index.html  script.js  style.css
scripts/: drop_like_enum.py
