[project]
name = "linap2"
version = "0.1.0"
description = ""
authors = [
    {name = "ArT"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry]
name = "linap2"
version = "0.1.0"
description = ""
authors = ["ArT"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.124.4,<0.125.0"
uvicorn = {extras = ["standard"], version = ">=0.38.0,<0.39.0"}
sqlalchemy = ">=2.0.45,<3.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
alembic = ">=1.17.2,<2.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
pydantic-settings = ">=2.12.0,<3.0.0"
passlib = ">=1.7.4,<2.0.0"
bcrypt = "4.0.1"
python-jose = {extras = ["cryptography"], version = ">=3.5.0,<4.0.0"}
redis = ">=7.1.0,<8.0.0"
yarl = ">=1.22.0,<2.0.0"
asyncpg = ">=0.31.0,<0.32.0"
pydantic = {extras = ["email"], version = ">=2.12.5,<3.0.0"}
email-validator = ">=2.3.0,<3.0.0"
jwt = ">=1.4.0,<2.0.0"
pyjwt = ">=2.10.1,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
